--- a/primeiro-projeto/src/app/component/interna/interna.component.scss
+++ b/primeiro-projeto/src/app/component/interna/interna.component.scss
@@ -7,11 +7,11 @@
 }
 .noticias .itemNoticia{
     width: 100%;
-    height: 333px;
-    background-image: url('https://picsum.photos/seed/picsum/1400/330');
+    height: 500px;
     background-position: center;
     background-size: cover;
     position: relative;
+    background-repeat: no-repeat;
 }
 .noticias .itemNoticia::before{
     content: '';
@@ -44,9 +44,10 @@
 .noticias .itemNoticia .textosNoticias h3{
     font-family: helvetica;
     font-weight: 700;
-    font-size: 60px;
+    font-size: 200%;
     line-height: 70px;
     color: #FFFFFF;
+    width: 70%;
 }
 .noticias .itemNoticia .textosNoticias h6{
     font-family: helvetica;
@@ -75,7 +76,7 @@
     color: #00D66F;
     text-decoration: none;
     font-family: helvetica;
-    font-size: 110%;
+    font-size: 150%;
     margin-left: 50px;
 }
 
@@ -84,7 +85,7 @@
 .bodyInterna .textBody p{
     color: white;
     font-family: helvetica;
-    font-size: 110%;
+    font-size: 150%;
     padding: 0px 40px 40px 40px;
     text-align: center;
 }
