--- a/primeiro-projeto/src/app/app.component.html
+++ b/primeiro-projeto/src/app/app.component.html
@@ -1,9 +1,12 @@
 <header>
   <nav>
-    <img src="../assets/logoItLean.png" alt="">
+    <img src="../assets/logoItLean.png" alt="" routerLink="./">
     <div class="contLinks">
-      <a href="#" class="btnLinkHome">
+      <a class="btnLinkHome" routerLink="./">
         Home
+      </a>
+      <a class="btnLinkLogin" routerLink="./login">
+        login
       </a>
     </div>
   </nav>
@@ -13,3 +16,8 @@
 <!--<app-home></app-home>
    <app-interna></app-interna>-->
 </section>
+<footer>
+  <div>
+    <p>&copy;It Lean || Angular Squad</p>
+  </div>
+</footer>
