--- a/primeiro-projeto/src/app/app.component.scss
+++ b/primeiro-projeto/src/app/app.component.scss
@@ -3,7 +3,8 @@
 
 header {
     width: 100%;
-    background-color: #6F6F6F;
+    background-image: linear-gradient(to bottom, black, gray,);
+
 }
   
 header nav {
@@ -20,21 +21,29 @@ header nav img {
   
 header nav .contLinks{
     display: flex;
-    flex-direction: row;
+    flex-direction: column-reverse;
     align-items: center;
 }
   
 header nav .contLinks .btnLinkHome {
     font-family: helvetica;
     text-decoration: none;
-    font-size: 24px;
+    font-size: 1.2rem;
     font-weight: 600;
     line-height: 28px;
     color: #000000;
-    min-height: 100%;
+    min-height: 70%;
     position: relative;
     display: flex;
     align-items: center;
+}
+
+header nav .contLinks .btnLinkLogin {
+    font-family: helvetica;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: #000000;
 }
 
 header nav .contLinks .btnLinkHome::after {
@@ -44,9 +53,30 @@ header nav .contLinks .btnLinkHome::after {
     width: 100%;
     height: 5px;
     background-color: #ffffff;
-    bottom: -22px;
+    bottom: -21px;
     left: 0;
-  }
+}
+
+// FOOTER
+
+footer{
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: linear-gradient(gray, black);
+    width: 100%;
+    padding: 30px 0 ;
+   
+}
+
+footer p{
+    align-items: center;
+    color: #6F6F6F;
+    font-family: helvetica;
+    font-size: 90%;
+}
+
 
 // MEDIA QUERY NAV
 
@@ -58,3 +88,4 @@ header nav .contLinks .btnLinkHome::after {
         padding: 15px 15px;
     }
 }
+
