--- a/primeiro-projeto/src/app/component/home/home.component.scss
+++ b/primeiro-projeto/src/app/component/home/home.component.scss
@@ -14,7 +14,7 @@
   padding: 10px 40px;
   margin: 15px;
   color: white;
-  font-size: 100%;
+  font-size: 90%;
   font-family: helvetica;
   border-radius: 10px;
   border: none;
@@ -38,8 +38,8 @@
   // padding: 50px 0px 0px 0px;
 }
 .noticias .itemNoticia{
-  width: 80%;
-  height: 500px;
+  width: 70%;
+  height: 400px;
   // background-image: url('https://picsum.photos/seed/picsum/1400/330');
   background-position: center;
   background-size: cover;
@@ -47,7 +47,7 @@
   transition: 1s;
 }
 .noticias .itemNoticia:hover{
-  transform: translateX(5px) scale(1.1);
+  transform: translateX(3px) scale(1.1);
 }
 
 .noticias .itemNoticia::before{
@@ -59,6 +59,17 @@
   left: 0;
   top: 0;
   background-color: rgba(0, 0, 0, 0.25);
+}
+
+.noticias .itemNoticia:hover::before{
+  content: '';
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 //  TEXTO DO CARD
@@ -88,6 +99,8 @@
   line-height: 70px;
   color: #FFFFFF;
   width: 70%;
+  text-shadow: 10px 10px 10px black;
+
 }
 .noticias .itemNoticia .textosNoticias h6{
   font-family: helvetica;
@@ -95,6 +108,8 @@
   font-size: 26px;
   line-height: 30px;
   color: #FFFFFF;
+  text-shadow: 10px 10px 10px black;
+
 }
 .noticias .itemNoticia .textosNoticias a{
   font-family: helvetica;
@@ -102,6 +117,8 @@
   font-size: 26px;
   line-height: 30px;
   color: #000AFF;
+  text-shadow: 10px 10px 10px black;
+
 }
 
 // MEDIA QUERY 
@@ -110,7 +127,7 @@
   .btnsNoticias button{
     padding: 7px 20px;
     margin: 15px 10px;
-    font-size: 130%;
+    font-size: 100%;
   }
   .noticias .itemNoticia .textosNoticias h3{
     font-family: helvetica;
@@ -131,7 +148,7 @@
 }
 
 
-@media ( max-width: 715px ){
+@media ( max-width: 880px ){
   .btnsNoticias button{
     padding: 7px 15px;
     margin: 10px 10px;
@@ -148,6 +165,7 @@
     line-height: 30px;
     color: #FFFFFF;
     width: 70%;
+    
   }
   .noticias .itemNoticia .textosNoticias h6{
     font-family: helvetica;
@@ -165,7 +183,6 @@
   }
 
 }
-
 
 @media( max-width: 550px ){
   .btnsNoticias .lineBtn{
